pods/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: echo
  labels:
    app: echo
spec:
  containers:
    - name: nginx
      image: ghcr.io/jpubdocker/simple-nginx-proxy:v0.1.0
      ports:
      - containerPort: 80
    - name: echo
      image: ghcr.io/jpubdocker/echo:v0.1.0
      ports:
      - containerPort: 8080
